# esp32-usb-VoWiFi

./: .gitignore  .gitmodules  README.md  partitions.csv  sdkconfig.defaults
esphome/: README.md
esphome/components/usb_hid_wakeup/: __init__.py  binary_sensor.py  button.py  text_sensor.py  usb_hid_wakeup.cpp  usb_hid_wakeup.h
esphome/example/: wakeup-keypress.yaml
main/: CMakeLists.txt  auth.c  auth.h  captive_portal.c  captive_portal.h  idf_component.yml  mqtt.h  nvs_config.c  nvs_config.h  ota.h  usb.c  usb.h  wifi.c  wifi.h
native-firmware/: partitions.csv
native-firmware/main/: CMakeLists.txt  httpd.c  main.c  mqtt.c  ota.c  usb.c  wifi.c
native-firmware/web/: setup.html
web/: admin.html
